Fix scrollbar appearing on icon hover

--- a/styles/scrabble.css
+++ b/styles/scrabble.css
@@ -72,7 +72,7 @@
 	justify-content: center;
 	align-items: center;
 
-	overflow-y: auto;
+	overflow-y: hidden;
 	overflow-x: hidden;
 	overflow-x: visible;
 }
